<resources>
    <string name="app_name">Summer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wanna_sum_up_some_numbers_click_the_button_below_to_start">Wanna sum up some numbers? Click the button below to start!</string>
    <string name="num_1">Num 1:</string>
    <string name="enter_first_number">Enter First Number</string>
    <string name="num_2">Num 2:</string>
    <string name="enter_second_number">Enter Second Number</string>
    <string name="sum">SUM!</string>
    <string name="your_sum_is">Your sum is:</string>
    <string name="your_encrypted_sum_is">Your encrypted sum is:</string>
    <string name="encrypt">Encrypt!</string>
</resources>