<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".SummerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="150dp"
        android:paddingStart="70dp"
        android:paddingEnd="70dp"
        android:paddingBottom="70dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/num1"
            android:text="@string/num_1"
            android:paddingEnd="70dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/num1_input"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_first_number"
            android:inputType="number" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="90dp"
        android:paddingStart="70dp"
        android:paddingEnd="70dp"
        android:paddingBottom="100dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/num2"
            android:text="@string/num_2"
            android:paddingEnd="70dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/num2_input"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_second_number"
            android:inputType="number" />


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sum"
        android:textStyle="bold"/>


</LinearLayout>